Archive2/5f/72374fd961cc9a/output
main.cpp: In function 'int main()':
main.cpp:20:33: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
  for (int i = 1; i = c.size() - 1; i++) {
                                 ^
main.cpp:26:10: error: expected '}' at end of input
  return 0;
          ^
